Minor bug fixed done in major components in frontend

--- a/video-frontend/public/index.html
+++ b/video-frontend/public/index.html
@@ -58,5 +58,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      window.onUsersnapLoad = function(api) {
+        api.init();
+      };
+      var script = document.createElement('script');
+      script.defer = 1;
+      script.src = 'https://widget.usersnap.com/global/load/3d0fcac5-80a6-4f97-9748-9b16cf074037?onload=onUsersnapLoad';
+      document.getElementsByTagName('head')[0].appendChild(script);
+    </script>
   </body>
 </html>
